# harness0

./: .gitignore  PII.md  PLAN.md  README.md  pyproject.toml
.claude/skills/pii-proxy/: SKILL.md
server/: detector.py  main.py  redact.py  schemas.py  store.py
tests/: conftest.py  test_api.py  test_demo.py  test_redact.py  test_store.py
