[project]
name = "pii-proxy"
version = "0.1.0"
description = "Session-scoped PII encode/decode proxy for LLM agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "transformers>=4.40",
    "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
